--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
+
+::-webkit-scrollbar {
+    display: none;
+}
+  
+::-webkit-scrollbar-thumb {
+    background: rgb(232, 255, 254);
+}
+
 html{
     scroll-behavior: smooth;
 }
@@ -22,6 +31,7 @@ body {
 
 a{
     text-decoration: none;
+    color: black;
 }
 
 .firstPage{
@@ -103,7 +113,7 @@ a{
     text-align: center;
 }
 
-.home-items{
+.home-items, .review-container{
     width: 80%;
     margin: 60px;
     display: flex;
@@ -113,7 +123,7 @@ a{
     justify-content: center;
 }
 
-.home-event{
+.home-event, .review{
     width: 350px;
     height: 400px;
     background-color: white;
@@ -188,6 +198,45 @@ a{
 
 .hidden {
     display: none;
+}
+
+.reviews{
+    margin-top: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: fit-content;
+}
+
+.review img{
+    height: 40px;
+    margin-top: 50px;
+}
+
+.review-title{
+    word-wrap: break-word;
+    margin: 20px;
+    text-align: center;
+}
+
+.review-content{
+    margin-left: 50px;
+    margin-right: 50px;
+    overflow-y: scroll;
+}
+
+.show-more-btn{
+    text-decoration: none;
+    background-color: #9ACC96;
+    padding: 10px 30px 10px;
+    border-radius: 10px;
+    text-align: center;
+    margin: 30px;
+    cursor: pointer;
+    color: black;
+    font-size: 20px;
+    border: none;
 }
 
 /* Back to top button styles */
